# Maidbook

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  security_audit.md
.github/workflows/: ci.yml
maidbook/: __init__.py  __main__.py  agents.py  cache.py  cli.py  common.py  health.py  tui.py
tests/: test_agents.py  test_cache.py  test_cli.py  test_common.py  test_health.py  test_integration.py  test_security.py
