[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maidbook"
version = "0.2.0"
description = "A tidy cache cleaner + health check for macOS"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Maidbook Contributors" }]
keywords = ["macos", "cache", "cleaner", "health-check", "tui", "curses"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

# Maidbook uses only the Python standard library. No runtime deps.
dependencies = []

[project.optional-dependencies]
# `pip-audit` is auto-detected at runtime; install it to unlock the
# Python-package CVE section of the health check.
audit = ["pip-audit>=2.7"]
test = ["pytest>=7.0"]

[project.scripts]
maidbook = "maidbook.__main__:main"

[project.urls]
Homepage = "https://github.com/Learn57130/Maidbook"
Source = "https://github.com/Learn57130/Maidbook"
Issues = "https://github.com/Learn57130/Maidbook/issues"
Changelog = "https://github.com/Learn57130/Maidbook/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["maidbook*"]
